# auto-contributor

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cmd/auto-contributor/: cmd_discover.go  cmd_loop.go  cmd_pipeline.go  main.go
cmd/query/: main.go
docs/: SELF_LEARNING_SPEC.md  contributor-skill-vs-auto.md  current-analysis.md  lockreason-signal-report.md  pr-49-signal-report.md  pr-53-signal-report.md  pr-61-signal-report.md  redesign-proposal.md  symphony-patterns.md
internal/claude/: executor.go  executor_test.go
internal/codex/: executor.go
internal/config/: config.go
internal/db/: db.go  db_test.go  events.go  lessons.go  repo_profiles.go  rule_embeddings.go  trajectories.go
internal/discovery/: claude_discovery.go  claude_discovery_test.go
internal/executor/: interface.go  types.go
internal/github/: client.go  client_test.go  pr.go  pr_test.go  repo.go  search.go
internal/pipeline/: agent.go  agent_test.go  agents.go  critic_test.go  decay_test.go  feedback.go  feedback_test.go  helpers.go  lessons.go  lessons_test.go  log.go  outcome.go  outcome_test.go  pipeline.go  prompt_security_test.go  qvalue.go  qvalue_test.go  synthesizer.go  synthesizer_test.go  trajectory.go  types.go  workspace_test.go
prompts/: analyst.md  critic.md  engineer.md  responder.md  reviewer.md  scout.md  submitter.md  synthesizer.md
scripts/: README.md  com.majiayu000.auto-contributor.plist  hourly-run.sh
tests/: __init__.py  conftest.py  test_finder.py
(+57 files in other folders)
